[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Towers/torre.gd" type="Script" id=1]
[ext_resource path="res://Assets/torre1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Towers/Bullets/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 220.0

[node name="Tower" type="Node2D"]
script = ExtResource( 1 )
bullet = ExtResource( 3 )

[node name="Skin" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Weapon" type="Area2D" parent="."]

[node name="Area" type="CollisionShape2D" parent="Weapon"]
shape = SubResource( 1 )

[node name="bulletHold" type="YSort" parent="."]

[node name="cadencia" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="Weapon" to="." method="_on_Weapon_area_entered"]
[connection signal="area_exited" from="Weapon" to="." method="_on_Weapon_area_exited"]
[connection signal="timeout" from="cadencia" to="." method="_on_Timer_timeout"]
